--- a/CreditCards.UITests/CreditCards.UITests.csproj
+++ b/CreditCards.UITests/CreditCards.UITests.csproj
@@ -99,6 +99,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CreditCardApplicationShould.cs" />
+    <Compile Include="CreditCardJavascriptTests.cs" />
     <Compile Include="CreditCardWebAppShould.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
